--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="Firefox icon">
+    <img src="images/firefox-icon.png" class = "img-firefox-icon" alt="Firefox icon">
     <p>At Mozilla, we're a global community of</p>
     
     <ul>
