--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
-  </head>
+<!doctype html>
+<html lang="en">
 
-  <body>
-    <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth." class="firefox-logo">
+    <head>
+        <meta charset="utf-8">
+        <title>Formatting a biography</title>
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
 
-    <p>At Mozilla, we’re a global community of</p>
+    <body>
+        <h1>Jane Doe</h1>
 
-    <ul>
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
-    </ul>
+        <div class="job-title">Web Developer</div>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+        </p>
 
-    <button>ユーザを変更</button>
-    <script src="scripts/main.js"></script>
-  </body>
+        <div class="contact-information">
+            <h2>Contact information</h2>
+            <div class="list"><ul>
+                <li>Email:
+                    <a href="mailto:jane@example.com">jane@example.com</a>
+                </li>
+                <li>Web:
+                    <a href="http://example.com">http://example.com</a>
+                </li>
+                <li>Tel: 123 45678</li>
+            </ul></div>
+        </div>
+
+    </body>
+
 </html>
